unpackaged/main/default/objects/SFMCAPISetting__c/SFMCAPISetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SFMC API Setting</label>
</CustomObject>