unpackaged/main/default/objects/SFMCAPISetting__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>