unpackaged/main/default/objects/SFMCAPISetting__c/fields/Asset_Ressource__c.field-meta.xml
<CustomField>
    <fullName>Asset_Ressource__c</fullName>
    <label>Asset Ressource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>