unpackaged/main/default/objects/SFMCAPISetting__c/fields/BackInStockAutomationExternalKey__c.field-meta.xml
<CustomField>
    <fullName>BackInStockAutomationExternalKey__c</fullName>
    <label>Back in Stock Automation External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>