unpackaged/main/default/objects/SFMCAPISetting__c/fields/BackInStockAutomationObjectId__c.field-meta.xml
<CustomField>
    <fullName>BackInStockAutomationObjectId__c</fullName>
    <description>Back In Stock Automation Object Id. populated by Batch_BackInStock</description>
    <label>Back In Stock Automation Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>