unpackaged/main/default/objects/SFMCAPISetting__c/fields/BackInStockDEExternalKey__c.field-meta.xml
<CustomField>
    <fullName>BackInStockDEExternalKey__c</fullName>
    <label>Back in Stock DE  External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>