unpackaged/main/default/objects/SFMCAPISetting__c/fields/clientId__c.field-meta.xml
<CustomField>
    <fullName>clientId__c</fullName>
    <label>Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>