unpackaged/main/default/objects/SFMCAPISetting__c/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>