unpackaged/main/default/objects/SFMCAPISetting__c/fields/deletePath__c.field-meta.xml
<CustomField>
    <fullName>deletePath__c</fullName>
    <label>deletePath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>