unpackaged/main/default/objects/SFMCAPISetting__c/fields/GrantType__c.field-meta.xml
<CustomField>
    <fullName>GrantType__c</fullName>
    <label>Grant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>