unpackaged/main/default/objects/SFMCAPISetting__c/fields/LastSentEventId__c.field-meta.xml
<CustomField>
    <fullName>LastSentEventId__c</fullName>
    <label>Last Sent Event Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>