unpackaged/main/default/objects/SFMCAPISetting__c/fields/QueryPath__c.field-meta.xml
<CustomField>
    <fullName>QueryPath__c</fullName>
    <label>QueryPath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>