unpackaged/main/default/objects/SFMCAPISetting__c/fields/Rest_Api_URL__c.field-meta.xml
<CustomField>
    <fullName>Rest_Api_URL__c</fullName>
    <label>Rest Api URL</label>
    <type>Url</type>
</CustomField>