unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIPerformRequestMsgNs2Attribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIPerformRequestMsgNs2Attribute__c</fullName>
    <label>Soap API PerformRequestMsg ns2 Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>