unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIPerformRequestMsgNsAttribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIPerformRequestMsgNsAttribute__c</fullName>
    <label>Soap API PerformRequestMsg ns Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>