unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIToMustUnderstandAttribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIToMustUnderstandAttribute__c</fullName>
    <label>Soap API To MustUnderstand Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>