unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIxmlnsaAttribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIxmlnsaAttribute__c</fullName>
    <label>Soap API xmlns:a Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>