unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIxmlnssAttribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIxmlnssAttribute__c</fullName>
    <label>Soap API xmlns:s Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>