unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIxmlnsuAttribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIxmlnsuAttribute__c</fullName>
    <label>Soap API xmlns:u Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>