unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIxmlnsxsdAttribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIxmlnsxsdAttribute__c</fullName>
    <label>Soap API xmlns:xsd Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>