unpackaged/main/default/objects/SFMCAPISetting__c/fields/SoapAPIxmlnsxsiAttribute__c.field-meta.xml
<CustomField>
    <fullName>SoapAPIxmlnsxsiAttribute__c</fullName>
    <label>Soap API xmlns:xsi Attribute</label>
    <length>255</length>
    <type>Text</type>
</CustomField>