unpackaged/main/default/objects/SFMCAPISetting__c/fields/SOM_Invoice_FolderID__c.field-meta.xml
<CustomField>
    <fullName>SOM_Invoice_FolderID__c</fullName>
    <label>SOM Invoice FolderID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>